# retrieval-augmented-generation

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile_cpu  README.md  app_conv.py  app_qa.py  config.yaml  dataset_generation.py  environment.yaml  file.txt  ingestor.py  pyproject.toml  requirements.txt
src/: embeddings.py  llms.py  prompt_templates.py  retrieval_qa.py  vectordb.py
src/helpers/: findenv.py  pgvutils.py
