[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = "demo of rag in python"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.4"
chromadb = "^0.4.24"
ctransformers = "^0.2.27"
faiss-cpu = "^1.8.0"
langchain = "^0.1.12"
PyMuPDF = "^1.23.26"
python-box = "^7.1.1"
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.6.0"
simsimd = "^3.3.0"
streamlit = "^1.32.1"
torch = "^2.2.1"
transformers = "^4.38.2"
umap-learn = "^0.5.5"
arize-phoenix = {version = "3.16.0", extras = ["evals"]}