[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = "demo of rag in python"
readme = "README.md"
package-mode = false
license = "Apache-2.0 license"
authors = ["Kok-Meng Tan"]

[tool.poetry.dependencies]
python = ">=3.11.4,<3.13"
psycopg2-binary = "^2.9.9"
chromadb = "^0.4.24"
ctransformers = "^0.2.27"
faiss-cpu = "^1.8.0"
langchain = "^0.1.12"
PyMuPDF = "^1.23.26"
python-box = "^7.1.1"
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.6.0"
simsimd = "^3.3.0"
streamlit = "^1.32.1"
torch = "^2.2.1"
transformers = "^4.38.2"
umap-learn = "^0.5.5"   
arize-phoenix = {version = "3.16.0", extras = ["evals"]}
#llama-cpp-python = "0.2.56"
pgvector = "^0.2.5"
tiktoken = "^0.6.0"
bert-score = "^0.3.13"
openai = "^1.17.0"
langchain-openai = "^0.1.3"
mlflow = "^2.11.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

